build/12-ingress-mariadb.yaml
# only needed to access mariadb outside the cluster. Not needed for normal qie-to-mariadb pod-to-pod operating
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  annotations:
  name: mariadb-ingress
  generation: 1
  namespace: fhir
  labels:
    app: mariadb
spec:
  rules:
    - host: mariadb-fhir.apps.lab.ocp.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mariadb
                port:
                  number: 3606
