build/28-ingress-fhirdemo.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: fhirdemo
  namespace: fhir
  selfLink: /apis/networking.k8s.io/v1beta1/namespaces/fhir/ingresses/fhirdemo
  uid: 86cbbe78-9b15-4ef1-8301-a99161a5522f
  resourceVersion: '61416500'
  generation: 3
  creationTimestamp: '2022-01-29T20:54:26Z'
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: networking.k8s.io/v1beta1
      time: '2022-01-29T20:54:26Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:rules': {}
spec:
  rules:
    - host: qie-svc-fhir.apps.lab.okd.lan
      http:
        paths:
          - path: /fhirdemo
            pathType: ImplementationSpecific
            backend:
              serviceName: qie-svc
              servicePort: 20015
status:
  loadBalancer: {}
